force-app/main/default/objects/Temporary_Pool__c/Temporary_Pool__c.object-meta.xml
<CustomObject>
    <description>added from sfdx plugin</description>
    <label>Temporary Pool</label>
    <nameField>
        <displayFormat>Temporary Pool-{0}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Temporary Pools</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>