force-app/main/default/objects/Temporary_Pool__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>What&#39;s the event (ex: New York World Tour)?</description>
    <inlineHelpText>What&#39;s the event (ex: New York World Tour)?</inlineHelpText>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>