force-app/main/default/objects/Temporary_Pool__c/fields/Org_Pool__c.field-meta.xml
<CustomField>
    <fullName>Org_Pool__c</fullName>
    <label>Org Pool</label>
    <referenceTo>Org_Pool__c</referenceTo>
    <relationshipLabel>Temporary Pools</relationshipLabel>
    <relationshipName>Temporary_Pools</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>