force-app/main/default/objects/Temporary_Pool__c/fields/Quantity__c.field-meta.xml
<CustomField>
    <fullName>Quantity__c</fullName>
    <description>How many orgs should there be ready for your users</description>
    <inlineHelpText>How many orgs should there be ready for your users</inlineHelpText>
    <label>Quantity</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>