force-app/main/default/objects/Temporary_Pool__c/fields/Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Start_Time__c</fullName>
    <description>when do you need the orgs to be ready (workshop start time)?</description>
    <inlineHelpText>when do you need the orgs to be ready (workshop start time)?</inlineHelpText>
    <label>Start Time</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>